[package]
name = "abf_analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
abf_reader = { version = "0.1.0", path = "abf_reader" }
iced = { version = "0.14.0", features = ["wgpu"] }
iced_plot = "0.4.0"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
